<resources>
    <string name="app_name">Secure Email</string>
    <string name="Email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="title_activity_mailbox">Mailbox</string>
    <string name="sgin_out">Sgin out</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_email">Send Email</string>
    <string name="the_message">The Message</string>
    <string name="the_draft">The Draft</string>
    <string name="settings">Settings</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="FristName">Frist name</string>
    <string name="LastName">Last Name</string>
    <string name="date">Date</string>
    <string name="PhoneNum">Phone Number</string>
    <string name="from">From</string>
    <string name="title_activity_tabbed">Mailbox</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to Toast and title of tabs and alertDialog -->
    <string name="message_sent">Your massage sent</string>
    <string name="registration_done">Registration is done</string>
    <string name="signed_in">Signed in</string>
    <string name="logged_out">Logged out</string>
    <string name="inbox">Inbox</string>
    <string name="sent_mails">Sent Mails</string>
    <string name="drafts">Drafts</string>
    <string name="attention">Attention</string>
    <string name="save_message">Do you want to save this message in the Drafts?</string>
    <string name="update_message">Do you want to save the changes of the draft?</string>
    <string name="message_saved_to_drafts">Your message saved into the Drafts</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sent_mail"></string>
    <string name="title_activity_mailbox2">mailbox2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="attachment">attachment</string>
</resources>
