<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.mail.secure.securemail.MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/editText16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText15"
            android:layout_alignStart="@+id/editText15"
            android:layout_below="@+id/editText15"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="195dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/register"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login"
            android:layout_alignBottom="@+id/login"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:text="@string/register" />

        <Button
            android:id="@+id/login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText16"
            android:layout_alignStart="@+id/editText16"
            android:layout_below="@+id/editText16"
            android:layout_marginTop="22dp"
            android:layout_weight="0.76"
            android:text="@string/login"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="100dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
