<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mail.secure.securemail.SendEmail">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="516dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-3dp"
        tools:ignore="MissingConstraints">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000">

        <EditText
            android:id="@+id/semail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:hint="@string/to"
            android:padding="8dp"
            android:textColor="#000"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000">
        <EditText
            android:id="@+id/ssubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:hint="@string/subject"
            android:padding="8dp"
            android:textColor="#000"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000">
        <EditText
            android:id="@+id/smessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="133dp"
            android:hint="@string/message"
            android:padding="8dp"
            android:textColor="#000"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
